# ANPR

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  number_plate_recognition.cpp  number_plate_recognition.h
